infrastructure/manifests/business-service-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: business-service
  namespace: 54agent
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8086
      targetPort: 8086
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: business-service
  namespace: 54agent
subsets:
  - addresses:
      - ip: 10.233.61.94
    ports:
      - name: http
        port: 8086
        protocol: TCP
